--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,21 +9,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Main9Activity"></activity>
-        <activity android:name=".Main8Activity" />
-        <activity android:name=".Main7Activity" />
-        <activity android:name=".Main6Activity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".FareActivity"></activity>
+        <activity android:name=".SeasonRegister" />
+        <activity android:name=".Stations" />
+        <activity android:name=".Credential" />
+        <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Main2Activity" />
-        <activity android:name=".Main3Activity" />
-        <activity android:name=".Main4Activity" />
-        <activity android:name=".Main5Activity" />
+        <activity android:name=".BookTicket" />
+        <activity android:name=".NormalBook" />
+        <activity android:name=".BookTravel" />
+        <activity android:name=".Register" />
     </application>
 
 </manifest>
