--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,8 @@ dependencies {
     implementation 'com.marlonmafra.android.widget:edittext-password:1.0.0'
     implementation 'io.realm:realm-annotations:0.88.3'
     implementation 'io.realm:realm-android-library:0.88.3'
+
+    implementation 'android.arch.persistence.room:runtime:' + rootProject.archRoomVersion
+    annotationProcessor 'android.arch.persistence.room:compiler:' + rootProject.archRoomVersion
     annotationProcessor 'io.realm:realm-annotations-processor:0.88.3'
 }
