--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,20 @@
+buildscript {
 
-        buildscript {
+    repositories {
+        google()
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:3.3.2'
 
-            repositories {
-                google()
-                jcenter()
-            }
-            dependencies {
-                classpath 'com.android.tools.build:gradle:3.3.2'
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+    }
+}
 
-
-                // NOTE: Do not place your application dependencies here; they belong
-                // in the individual module build.gradle files
-            }
-        }
-
+ext {
+    archRoomVersion = "1.0.0-alpha1"
+}
 allprojects {
     repositories {
         google()
