--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,14 +3,16 @@
     package="com.example.androidexamp.example">
 
     <application
+        android:name=".UtsApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".UtsApplication"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.FareActivity"></activity>
+        <activity android:name=".activity.PlatformActivity"></activity>
+        <activity android:name=".activity.QrScanActivity" />
+        <activity android:name=".activity.FareActivity" />
         <activity android:name=".activity.SeasonRegister" />
         <activity android:name=".activity.Stations" />
         <activity android:name=".activity.Credential" />
@@ -25,6 +27,7 @@
         <activity android:name=".activity.NormalBook" />
         <activity android:name=".activity.BookTravel" />
         <activity android:name=".activity.Register" />
+        <activity android:name=".activity.TicketTypeActivity" />
     </application>
 
 </manifest>
